Fix header vertical alignment

--- a/static/style.css
+++ b/static/style.css
@@ -84,7 +84,7 @@ table .value {
 }
 #header a.logo {
     display: inline-block;
-    padding: 10px 0;
+    padding: 12px 0;
     color: #666;
     font-size: 24px;
     font-weight: bold;
@@ -100,6 +100,7 @@ table .value {
 }
 #lga_search .selectize-control {
     width: 220px;
+    margin-bottom: 0;
 }
 
 #header .global_nav {
